<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminDashboard">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </RelativeLayout>

    <TextView
        android:id="@+id/adminName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="cursive"
        android:text="@string/admingreeting"
        android:textColor="@color/lightPurple"
        android:textSize="30sp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/designs"
        android:layout_width="155dp"
        android:layout_height="200dp"
        android:layout_marginTop="180dp"
        android:layout_marginStart="15dp"
        android:drawableTop="@drawable/idea"
        android:padding="20dp"
        android:text="@string/designs"
        android:fontFamily="serif"
        android:textSize="20sp"
        android:textColor="@color/purple_500"
        android:backgroundTint="@color/lightPurple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/offers"
        android:layout_width="155dp"
        android:layout_height="200dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="15dp"
        android:text="@string/offers"
        android:fontFamily="serif"
        android:textSize="20sp"
        android:textColor="@color/purple_500"
        android:backgroundTint="@color/lightPurple"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawableTop="@drawable/gift"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/applicants"
        android:layout_width="155dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/lightPurple"
        android:drawableTop="@drawable/survey"
        android:fontFamily="serif"
        android:padding="20dp"
        android:text="@string/applicants"
        android:textColor="@color/purple_500"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/designs" />

    <Button
        android:id="@+id/Adminprofile"
        android:layout_width="155dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:drawableTop="@drawable/personalinformation"
        android:padding="20dp"
        android:fontFamily="serif"
        android:text="@string/profile"
        android:textSize="20sp"
        android:textColor="@color/purple_500"
        android:backgroundTint="@color/lightPurple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offers" />
</androidx.constraintlayout.widget.ConstraintLayout>