<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DesignerProfile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/DesignerInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/adminprifile"
            android:textColor="@color/purple_500"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/editTextTextPersonNameDesigner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/DesignerInfo"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/designerName"
            android:textColor="@color/lightPurple"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextTextPersonEmailDesigner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextTextPersonNameDesigner"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/adminEmail"
            android:textColor="@color/lightPurple"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextTextPasswordDesigner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextTextPersonEmailDesigner"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/adminPassword"
            android:textColor="@color/lightPurple"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextTextCityDesigner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextTextPasswordDesigner"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/adminCity"
            android:textColor="@color/lightPurple"
            android:textSize="20sp" />

        <Button
            android:id="@+id/DesignerEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/roundedcorners"
            android:text="@string/edit"
            android:textSize="17sp" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>