<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".designerHome">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_500"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/mainTitle3"
            android:layout_width="295dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/title_home"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="15dp" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/menudots"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.appcompat.widget.Toolbar>
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/purple_500"
        android:layout_marginTop="50dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:id="@+id/designernametitle"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:fontFamily="cursive"
            android:textSize="25sp"
            android:text="@string/designerName"/>
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="130dp">

        <Button
            android:id="@+id/so"
            android:layout_width="350dp"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="@color/lightPurple"
            android:drawableRight="@drawable/idea2"
            android:fontFamily="sans-serif"
            android:padding="30dp"
            android:text="@string/suggestDesign"
            android:textColor="@color/purple_500"
            android:textSize="20sp" />


        <Button
            android:id="@+id/sd"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_below="@+id/so"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="@color/lightPurple"
            android:drawableLeft="@drawable/gift2"
            android:drawablePadding="20dp"
            android:padding="30dp"
            android:fontFamily="sans-serif"
            android:text="@string/suggestOffer"
            android:textColor="@color/purple_500"
            android:textSize="20sp" />
    </RelativeLayout>

</FrameLayout>